--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -137,9 +137,10 @@ header {
             flex-grow: initial;
             font-size: 13pt;
             color: #696969;
+            transition: all 0.3s ease;
 
             .navbar-nav {
-
+                
                 &.eng {
                     @media (min-width: 991px) {
                         font-size: 10pt;
@@ -163,10 +164,12 @@ header {
 
                 .nav-item {
                     border-bottom: 1.5px solid transparent;
+                    transition: border-bottom 0.2s ease;
 
                     .nav-link {
                         border-right: 1.5px solid #fff;
                         padding: 0px 8px;
+                        transition: color 0.2s ease;
 
                         @media (min-width: 991px) {
                             color: #fff !important;
@@ -192,6 +195,7 @@ header {
                         display: inline-block;
                         text-align: center;
                         margin-left: 5px;
+                        transition: all 0.2s ease;
 
                         @media (max-width: 1366px) {
                             position: absolute;
@@ -204,11 +208,17 @@ header {
                         font-size: 12pt;
                         line-height: 12pt;
                         width: 115px !important;
+                        transition: all 0.2s ease;
 
                         .material-icons {
                             font-size: 20px;
                             vertical-align: text-top;
                             margin-right: 5px;
+                            transition: transform 0.2s ease;
+                        }
+
+                        &:hover .material-icons {
+                            transform: scale(1.1);
                         }
 
                         @media (max-width: 992px) {
@@ -230,16 +240,25 @@ header {
                 box-shadow: 0px 10px 10px #666;
                 background-color: #fff;
                 z-index: 99;
+                transform: translateY(0);
+                opacity: 1;
+
+                &.collapsing {
+                    transform: translateY(-10px);
+                    opacity: 0;
+                }
 
                 .navbar-nav {
                     .nav-item {
                         .nav-link {
                             border: none;
                             padding: 10px 12px;
+                            transition: all 0.2s ease;
 
                             &:hover {
                                 color: #696969;
                                 box-shadow: none;
+                                background-color: rgba(39, 78, 128, 0.1);
                             }
                         }
                     }
