[modify] fix issue

--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -925,6 +925,10 @@ main {
                 height: 350px;
             }
 
+            @media (max-width: 991px) {
+                height: 150px;
+            }
+
         }
 
         .content {
