[modify] logo size

--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -115,7 +115,8 @@ header {
             height: 100%;
 
             img {
-                height: 89px;
+                height: 70px;
+                margin: 7px 0;
             }
 
             @media (max-width: 576px) {
