--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -507,7 +507,7 @@ footer {
 
     .social_link {
         text-align: right;
-
+        z-index: 1;
         img {
             width: 30px;
             margin: 5px 5px 20px 5px;
