--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -415,6 +415,8 @@ footer {
     @media (max-width: 991px) {
         height: 600px;
         max-height: fit-content;
+        width: 100%;
+        overflow: hidden;
     }
 
     img.logo {
