--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -9,6 +9,8 @@ body {
     font-family: 'Noto Sans TC', 'Noto Sans SC', '微軟正黑體', sans-serif !important;
     padding: 0;
     margin: 0;
+    width: 100%;
+    overflow-x: hidden;
 }
 
 a {
