--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -1173,6 +1173,9 @@ main {
         #product_detail_content,
         #contact_content {
 
+            a{
+                text-decoration: underline !important;
+            }
 
             /* 字体大小样式 */
             .text-big {
