[modify] change table style

--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -1226,6 +1226,7 @@ main {
             /* 表格样式 */
             .table {
                 width: 100%;
+                border-collapse: separate;
             }
 
             .table-bordered {
