[modify] center image as default

--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -1218,7 +1218,7 @@ main {
                 margin-left: 10px;
             }
 
-            .image-align-center {
+            img {
                 display: block;
                 margin: 0 auto;
             }
