[modify] modal width

--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -2275,7 +2275,7 @@ main {
         }
 
         .modal-image {
-            max-width: 750px;
+            max-width: 85vw;
             max-height: 90vh;
             object-fit: contain;
 
