--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -142,6 +142,7 @@ header {
                 &.eng {
                     @media (min-width: 991px) {
                         font-size: 10pt;
+                        letter-spacing: -0.5px;
 
                         .nav-item.ask_price {
                             font-size: 10pt;
@@ -269,7 +270,7 @@ header {
                     }
                 }
 
-                .nav-item:nth-child(n+9) .nav-link,
+                .nav-item:nth-child(n+10) .nav-link,
                 .nav-item:last-child .nav-link {
                     border-right: none;
                 }
