[modify] page update

--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -903,6 +903,12 @@ main {
                 color: #274e80;
             }
 
+            p {
+                line-height: 38px;
+                font-size: 15pt;
+                font-weight: 300;
+            }
+
             .container {
                 z-index: 1;
                 position: relative;
