[modify] update css

--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -1318,6 +1318,9 @@ main {
                 font-weight: bold;
             }
 
+            li{
+                color: rgb(33, 37, 41) !important;
+            }
 
         }
 
