[modify] update dists files

--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -523,8 +523,7 @@ footer {
         }
 
         @media (max-width: 991px) {
-            margin-top: 0px;
-            margin-left: 15px;
+            margin: 15px 0 0 15px;
             text-align: left;
         }
 
